[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ForensicVM"
authors = [{name = "Eng.º Nuno Mourinho", email = "nuno.mourinho@gmail.com"}, {name = "Dr. Rogério Bravo", email = ""}, {name = "Engº. Mário Candeias", email = ""}]
dynamic = ["version", "description"]


